# advent_of_code

./: README.md
2014/solution_python/: README.md  pyproject.toml
2024/solution_python/: .gitignore  README.md
2024/solution_python/q1/: script.py
2024/solution_python/q2/: script.py
2024/solution_python/q3/: script.py  test.txt
2024/solution_python/q4/: script.py
