[tool.poetry]
name = "aoc-2014"
version = "0.1.0"
description = ""
authors = ["myuR <myurpvn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

